<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.matchandtrade</groupId>
	<artifactId>matchandtrade-api</artifactId>
	<version>2.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Match And Trade RESTful API</name>
	<description>Match and Trade REST API</description>

	<scm>
		<connection>scm:git:git://github.com/rafasantos/matchandtrade.git</connection>
		<url>https://github.com/rafasantos/matchandtrade.git</url>
	</scm>
  
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/rafasantos/matchandtrade/blob/master/LICENSE.txt</url>
			<comments>Open source, can distribute, can modify, cannot hold liable, provided "as is"</comments>
		</license>
	</licenses>

	<properties>
		<!-- Plugin and dependency versions -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<chrisokasaki.tm.trade-maximizer.version>1.3c-beta</chrisokasaki.tm.trade-maximizer.version>

		<com.h2database.h2.version>2.2.220</com.h2database.h2.version>
		<org.apache.httpcomponents.httpclient>4.5.3</org.apache.httpcomponents.httpclient>
		<apache-commons-cli>1.3.1</apache-commons-cli>
		<org.jacoco.version>0.8.1</org.jacoco.version>
		<org.apache.commons.commons-csv>1.4</org.apache.commons.commons-csv>
	</properties>

	<!-- Spring Boot Parent. See: https://docs.spring.io/spring-boot/docs/current/reference/html/using-boot-build-systems.html -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.0.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<dependencies>
		<!-- TradeMaximizer -->
		<dependency>
			<groupId>chrisokasaki.tm</groupId>
			<artifactId>trade-maximizer</artifactId>
			<version>${chrisokasaki.tm.trade-maximizer.version}</version>
		</dependency>

		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.aspectj</groupId>
                    <artifactId>aspectjweaver</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.yaml</groupId>
					<artifactId>snakeyaml</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- JAXRS --><!-- TODO: See if we can remove this dependency -->
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0</version>
		</dependency>

		<!-- JAXB --><!-- TODO: See if we can remove this dependency -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>

		<!-- H2 Database -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${com.h2database.h2.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Apache HttpComponents --><!-- TODO: See if we can remove this dependency -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>

		<!-- Apache Commons CLI --><!-- TODO: See if we can remove this dependency -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${apache-commons-cli}</version>
		</dependency>

		<!-- Apache Commons CSV -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>${org.apache.commons.commons-csv}</version>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<!-- failsafeArgLine and surefireArgLine are created by jacoco on the 'site' profile -->
				<!-- Setting as empty or it will break failsafe and surefire plugins -->
				<failsafeArgLine> </failsafeArgLine>
				<surefireArgLine> </surefireArgLine>
			</properties>
		</profile>
		<profile>
			<id>jacoco</id>
			<build>
				<plugins>
					<!-- Testing Code Coverage -->
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${org.jacoco.version}</version>
						<executions>
							<!-- Prepares the property pointing to the JaCoCo runtime agent which is passed as VM argument when Maven the Surefire plugin is executed. -->
							<execution>
								<id>pre-unit-test</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<!-- Sets the path to the file which contains the execution data. -->
									<destFile>${project.reporting.outputDirectory}/jacoco-ut.exec</destFile>
									<!-- Sets the name of the property containing the settings for JaCoCo runtime agent. -->
									<propertyName>surefireArgLine</propertyName>
								</configuration>
							</execution>
							<!-- Ensures that the code coverage report for unit tests is created after unit tests have been run. -->
							<execution>
								<id>post-unit-test</id>
								<phase>test</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<!-- Sets the path to the file which contains the execution data. -->
									<dataFile>${project.reporting.outputDirectory}/jacoco-ut.exec</dataFile>
									<!-- Sets the output directory for the code coverage report. -->
									<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
								</configuration>
							</execution>
		
							<!-- Prepares the property pointing to the JaCoCo runtime agent which is passed as VM argument when Maven the Failsafe plugin is executed. -->
							<execution>
								<id>pre-integration-test</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<!-- Sets the path to the file which contains the execution data. -->
									<destFile>${project.reporting.outputDirectory}/jacoco-it.exec</destFile>
									<!-- Sets the name of the property containing the settings for JaCoCo runtime agent. -->
									<propertyName>failsafeArgLine</propertyName>
								</configuration>
							</execution>
							<!-- Ensures that the code coverage report for integration tests after integration tests have been run. -->
							<execution>
								<id>post-integration-test</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<!-- Sets the path to the file which contains the execution data. -->
									<dataFile>${project.reporting.outputDirectory}/jacoco-it.exec</dataFile>
									<!-- Sets the output directory for the code coverage report. -->
									<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
								</configuration>
							</execution>
		
							<!-- Merge both Unit Tests + Integration Tests in a single dataFile -->
							<execution>
								<id>merge-data-file</id>
								<phase>verify</phase>
								<goals>
									<goal>merge</goal>
								</goals>
								<configuration>
									<!-- Sets the path to the file which contains the execution data. -->
									<destFile>${project.reporting.outputDirectory}/jacoco-merge.exec</destFile>
									<fileSets>
										<fileSet>
											<directory>${project.reporting.outputDirectory}</directory>
											<include>*.exec</include>
										</fileSet>
									</fileSets>
								</configuration>
							</execution>
							
							<!-- Generates a merged report from <id>merge-data-file</id> -->
							<execution>
								<id>report-merge</id>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<!-- Sets the path to the file which contains the execution data. -->
									<dataFile>${project.reporting.outputDirectory}/jacoco-merge.exec</dataFile>
									<!-- Sets the output directory for the code coverage report. -->
									<outputDirectory>${project.reporting.outputDirectory}/jacoco-merge</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<defaultGoal>install</defaultGoal>

		<!-- Default resources directory -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<!-- Resources directory with filtering -->
			<resource>
				<directory>src/main/version</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>repackage</id>
						<configuration>
							<classifier>exec</classifier>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<arguments>
						<argument>-cf</argument>
						<argument>${basedir}/config/matchandtrade.properties</argument>
					</arguments>
					<mainClass>com.matchandtrade.WebserviceApplication</mainClass>
				</configuration>
			</plugin>
			
			<!-- Unit Tests will test classes ending in *UT -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<parallel>classes</parallel>
					<threadCount>4</threadCount>
					<excludes>
						<exclude>**/*Suite.java</exclude>
						<exclude>**/*Test.java</exclude>
					</excludes>
					<includes>
						<include>**/*UT.java</include>
					</includes>
					<!-- -Xverify:none may reduce startup time. No need to verify bytecode on the test phase -->
					<!-- ${surefireArgLine} jacoco instrumentation -->
					<argLine>-Xverify:none ${surefireArgLine}</argLine>
				</configuration>
			</plugin>

			<!-- Integration Tests will test classes ending in *Suite* -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.1</version>
				<executions>
					<execution>
						<id>integration-test-verify</id>
						<phase>verify</phase>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
					<execution>
						<id>integration-test-execution</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>				
				<configuration>
					<parallel>suites</parallel>
					<threadCount>6</threadCount>
					<excludes>
						<exclude>**/*Test.java</exclude>
						<exclude>**/*UT.java</exclude>
					</excludes>
					<includes>
						<include>**/*Suite.java</include>
					</includes>
					<!-- -Xverify:none may reduce startup time. No need to verify bytecode on the test phase -->
					<!-- ${surefireArgLine} jacoco instrumentation -->
					<argLine>-Xverify:none ${failsafeArgLine}</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- See: https://blog.jayway.com/2012/04/07/continuous-deployment-versioning-and-git/ -->
			<!-- See: http://www.mojohaus.org/buildnumber-maven-plugin/usage.html -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<format>{0}</format>
					<items>
						<item>scmVersion</item>
					</items>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.3</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
			</plugin>

		</plugins>
	</build>

</project>
